<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"


    tools:context="com.siddiquinoor.restclient.activity.GraduationActivity">
    <!-- Header aligned to top -->
    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <RelativeLayout
        android:id="@+id/page_title"
        android:layout_width="fill_parent"

        android:layout_height="wrap_content"
        android:layout_below="@+id/header">


        <TextView
            android:id="@+id/tv_ass_page2Title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tv_GraduationTitleLabel"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="@dimen/abc_text_size_large_material" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_details"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/page_title"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- For label -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:orientation="vertical">

                <TextView


                    style="@style/txt_label"

                    android:text="Id" />

                <TextView
                    android:id="@+id/tv_awardLable"
                    style="@style/txt_label"

                    android:text="@string/award_label" />

                <TextView
                    style="@style/txt_label"
                    android:text="@string/program_label"

                    />

                <TextView
                    style="@style/txt_label"
                    android:text="@string/criteria_label"

                    />
            </LinearLayout>
            <!-- For combox -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_searchId"
                    style="@style/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"


                    android:hint="@string/search_id"
                    android:inputType="number"
                    android:padding="10dp"

                    />

                <Spinner
                    android:id="@+id/sp_Award_Graduation"
                    style="@style/spinner_style" />

                <Spinner
                    android:id="@+id/sp_Program_Graduation"
                    style="@style/spinner_style" />

                <Spinner
                    android:id="@+id/sp_Criteria_Graduation"
                    style="@style/spinner_style" />

            </LinearLayout>
        </LinearLayout>


        <!-- search id field -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <!--    <EditText

                    android:id="@+id/edt_searchId"
                    style="@style/edit_text"
                    android:layout_width="450dp"
                    android:layout_height="@dimen/view_height"
                    android:hint="Search Member ID"
                    android:inputType="number"
                    android:maxLength="2" />-->


            <!-- search member id Button -->


            <Button
                android:id="@+id/btn_Graduation_SearchID"
                android:layout_width="wrap_content"

                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:drawableLeft="@drawable/search_20_20"
                android:padding="5dp"
                android:text="@string/lbl_search_btn" />


        </RelativeLayout>

    </LinearLayout>
    <!-- title of list view  -->
    <RelativeLayout
        android:id="@+id/table_title"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/ll_details"
        android:background="@color/title_bg_col">


        <TextView
            android:id="@+id/text_table"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"


            android:padding="10dp"

            android:text="Id"
            android:textColor="@color/white"
            android:textSize="@dimen/abc_text_size_menu_material" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_toLeftOf="@+id/textView2"

            android:layout_toRightOf="@+id/text_table"
            android:layout_toStartOf="@+id/textView2"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="Name"
            android:textColor="@color/white"
            android:textSize="@dimen/abc_text_size_menu_material" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_gravity="center_horizontal"
            android:layout_toLeftOf="@+id/txt_Date"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="Reason"
            android:textColor="@color/white"
            android:textSize="@dimen/abc_text_size_menu_material" />


        <TextView
            android:id="@+id/txt_Date"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_toLeftOf="@+id/txt_edit"
            android:layout_toStartOf="@+id/txt_edit"
            android:gravity="center_horizontal"
          android:padding="10dp"
            android:text="Date"
            android:textColor="@color/white"
            android:textSize="@dimen/abc_text_size_menu_material" />


        <TextView
            android:id="@+id/txt_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="Edit"

            android:textColor="@color/white"
            android:textSize="@dimen/abc_text_size_menu_material" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3">


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3">


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4">


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2">


        </LinearLayout>

    </RelativeLayout>

    <ListView
        android:id="@+id/lv_graduationList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/table_title"
        android:layout_centerVertical="true" />


    <!-- Search Button -->

    <LinearLayout
        android:layout_width="fill_parent"

        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/lv_assign">

        <!-- search Button -->
        <!--
        <Button

            android:id="@+id/btn_assign_search"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/btn_search"
            android:textSize="12dp"
            android:background="@drawable/button_style_inner"
            android:textColor="@color/green" />
            -->

        <!--   <Button

               android:layout_width="0dp"
               android:layout_height="50dp"
               android:layout_weight="1"
               android:text="@string/btn_RemoveLabel"
               android:textSize="12dp"
               android:background="@drawable/button_style_inner"
               android:textColor="@color/green"/>-->

    </LinearLayout>

    <include layout="@layout/footer" />

</RelativeLayout>

    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.siddiquinoor.restclient.activity.ServiceActivity">

        <include layout="@layout/header"        />
        <RelativeLayout
            android:layout_below="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView android:text="@string/hello_world" android:layout_width="wrap_content" android:layout_height="wrap_content" />

        </RelativeLayout>
       <include layout="@layout/footer"/>

    </RelativeLayout> -->

    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.siddiquinoor.restclient.activity.AssignActivity">

        <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>-->

    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.siddiquinoor.restclient.activity.Graduation    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>-->
